--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "express": "^4.21.1",
     "winston": "^3.17.0"
   }
