--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/lodash": "^4.17.13",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
+    "lodash": "^4.17.21",
     "winston": "^3.17.0"
   }
 }
