--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.13",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
     "winston": "^3.17.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
