--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "helmet": "^8.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "winston": "^3.17.0"
   },
